@@ -1,3 +1,8 @@
+2010-04-12  Rudy Neeser  <rudy.neeser@gmail.com>
+
+	* vector.lisp (vector=): Performed some optimisations to make
+	vector comparision quicker.
+
 2010-04-06  Rudy Neeser  <rudy.neeser@gmail.com>
 
 	* random.lisp (uniform): Added a method to create uniformly
